feat(notification): add provider configs
